move computations to MarginFeeVals. compute correct daily spends.

--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/CampStats/Daily.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/CampStats/Daily.cshtml
@@ -58,6 +58,7 @@ Campaign: @Model.Name
             sheets: [{
                 name: 'Daily',
                 dataSource: datasource,
+                frozenRows: 1,
                 columns: [
                     { width: 100 },
                     { width: 100 },
