--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/DailySummaries/Index.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/DailySummaries/Index.cshtml
@@ -8,7 +8,7 @@
     }
 </script>
 }
-<h2>Daily Summaries</h2>
+<h2>Daily Summaries (Raw)</h2>
 
 @if (Model.Month.HasValue) {
     <div style="margin-bottom:10px">
