Budgets- update month

--- a/3/DirectAgents.Web/DirectAgents.Web/Views/Budgets/OfferRow.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Views/Budgets/OfferRow.cshtml
@@ -56,7 +56,7 @@
     }
     else
     {
-        <input type="button" value="Edit" onclick="LoadBudgetRow(@offer.OfferId, false, true)" />
+        <input type="button" value="Edit" onclick="LoadBudgetRow(@offer.OfferId, false, true)" data-offer-id="@offer.OfferId" />
     }
 </td>
 <td style="text-align:right">
