--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Campaigns/Index.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Campaigns/Index.cshtml
@@ -13,7 +13,7 @@
     <th></th>
     <th>Advertiser</th>
     <th>Campaign</th>
-    <th>External Accounts</th>
+    <th>Ext Accts</th>
     <th>Partners</th>
     <th>Stats</th>
     <th>Extra Items</th>
