--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Stats/ExtAccount.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Stats/ExtAccount.cshtml
@@ -19,6 +19,7 @@
 <table>
 <tr>
     <th>Partner</th>
+    <th>ID</th>
     <th>Ext Account</th>
     <th>Impressions</th>
     <th>Clicks</th>
@@ -35,6 +36,7 @@
 {
 <tr>
     <td>@stat.ExtAccount.Platform.Name</td>
+    <td>@stat.ExtAccount.Id</td>
     <td>
         @if (stat.ExtAccount.Platform.Code == Platform.Code_AdRoll)
         {
