--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Platforms/Maintenance.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Platforms/Maintenance.cshtml
@@ -1,10 +1,12 @@
 ﻿@using DirectAgents.Domain.Entities.TD;
 @model Platform
 @{
+    bool super = Request.QueryString["super"] == "1";
     DateTime yesterday = DateTime.Today.AddDays(-1);
     DateTime oneWeekAgo = yesterday.AddDays(-6);
     DateTime firstOfMonth = (yesterday.Day == 1 ? yesterday.AddMonths(-1) : new DateTime(yesterday.Year, yesterday.Month, 1));
     //If it's the 1st or 2nd, firstOfMonth is last month. Otherwise, it's this month.
+    string onclickJS = "$('#divPlatformUpdate').html('Syncing... please wait')";
 }
 
 <h2>@Model.Name - Maintenance</h2>
@@ -13,19 +15,31 @@
 @if (Model.Code == Platform.Code_AdRoll)
 {
     @Html.ActionLink("Update Accounts", "SyncAccounts", new { id = Model.Id }, new { onclick = "$('#divPlatformUpdate').html('Updating... please wait')" })
-    <text>&nbsp;&nbsp;&nbsp;&nbsp;Sync Stats back to:</text>
-    string onclickJS = "$('#divPlatformUpdate').html('Syncing... please wait')";
-    @Html.ActionLink(firstOfMonth.ToShortDateString(), "SyncStats", new { id = Model.Id, start = firstOfMonth.ToShortDateString() }, new { onclick = onclickJS })
-    <text>&nbsp;</text>
-    if (oneWeekAgo != firstOfMonth) {
-        @Html.ActionLink(oneWeekAgo.ToShortDateString(), "SyncStats", new { id = Model.Id, start = oneWeekAgo.ToShortDateString() }, new { onclick = onclickJS })
+    if (super)
+    {
+        <text>&nbsp;&nbsp;&nbsp;&nbsp;Sync Stats back to:</text>
+        @Html.ActionLink(firstOfMonth.ToShortDateString(), "SyncStats", new { id = Model.Id, start = firstOfMonth.ToShortDateString() }, new { onclick = onclickJS })
         <text>&nbsp;</text>
+        if (oneWeekAgo != firstOfMonth) {
+            @Html.ActionLink(oneWeekAgo.ToShortDateString(), "SyncStats", new { id = Model.Id, start = oneWeekAgo.ToShortDateString() }, new { onclick = onclickJS })
+            <text>&nbsp;</text>
+        }
+        @Html.ActionLink(yesterday.ToShortDateString(), "SyncStats", new { id = Model.Id, start = yesterday.ToShortDateString() }, new { onclick = onclickJS })
     }
-    @Html.ActionLink(yesterday.ToShortDateString(), "SyncStats", new { id = Model.Id, start = yesterday.ToShortDateString() }, new { onclick = onclickJS })
 }
 else if (Model.Code == Platform.Code_DBM)
 {
-    @Html.ActionLink("Sync Stats For All Accounts", "SyncStats", new { id = Model.Id }, new { onclick = "$('#divPlatformUpdate').html('Syncing... please wait')" })
+    if (super)
+    {
+        @Html.ActionLink("Sync Stats For All Accounts", "SyncStats", new { id = Model.Id }, new { onclick = onclickJS })
+    }
+}
+else if (Model.Code == Platform.Code_FB)
+{
+    if (super)
+    {
+        @Html.ActionLink("Sync Stats For All Accounts", "SyncStats", new { id = Model.Id }, new { onclick = onclickJS })
+    }
 }
 </div>
 <br />
