--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Platforms/Index.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/Platforms/Index.cshtml
@@ -7,6 +7,7 @@
 
 <table>
 <tr>
+    <th></th>
     <th>Code</th>
     <th>Name</th>
     <th>Show/Create...</th>
@@ -16,6 +17,7 @@
 @foreach (var plat in Model)
 {
 <tr>
+    <td>@Html.ActionLink("Edit", "Edit", new { id = plat.Id })</td>
     <td>@plat.Code</td>
     <td>@plat.Name</td>
     <td>@Html.ActionLink("ExtAccounts(" + plat.ExtAccounts.Count + ")", "Index", "ExtAccounts", new { platform = plat.Code }, null)</td>
