--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/ExtAccounts/Index.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/ExtAccounts/Index.cshtml
@@ -10,6 +10,7 @@
     <th>Partner</th>
     <th>AccountName</th>
     <th>ExternalId</th>
+    <th></th>
 </tr>
 @foreach (var extAcct in Model)
 {
@@ -18,6 +19,7 @@
     <td>@extAcct.Platform.Name</td>
     <td>@extAcct.Name</td>
     <td>@extAcct.ExternalId</td>
+    <td>@Html.ActionLink("Upload Stats", "UploadStats", new { id = extAcct.Id })</td>
 </tr>
 }
 </table>
