--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/PlatColMappings/Edit.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/PlatColMappings/Edit.cshtml
@@ -40,8 +40,8 @@
             <input type="submit" value="Save" />
             &nbsp;@Html.ActionLink("cancel", "Edit", "Platforms", new { id = Model.Id }, null)
             <br /><br />
-            Fill in the corresponding names of the columns that a CSV file will have.
-            Leave blank to skip that field.
+            Fill in the names of the columns that a CSV file will have for the above fields.
+            Leave blank to skip that field when uploading.
         </div>
     }
 </fieldset>
