--- a/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/PlatColMappings/Edit.cshtml
+++ b/3/DirectAgents.Web/DirectAgents.Web/Areas/TD/Views/PlatColMappings/Edit.cshtml
@@ -42,6 +42,8 @@
             <br /><br />
             Fill in the names of the columns that a CSV file will have for the above fields.
             Leave blank to skip that field when uploading.
+            <br /><br />
+            Note: Column names are case-sensitive.
         </div>
     }
 </fieldset>
